--- a/dubbo-demo/dubbo-demo-annotation/dubbo-demo-annotation-provider/src/main/resources/spring/dubbo-provider.properties
+++ b/dubbo-demo/dubbo-demo-annotation/dubbo-demo-annotation-provider/src/main/resources/spring/dubbo-provider.properties
@@ -17,22 +17,11 @@
 #
 #
 
-#dubbo.application.name=dubbo-demo-annotation-provider
-
 dubbo.application.name=dubbo-demo-annotation-provider
 
-dubbo.protocol.id=dubbo
-dubbo.protocol.name=dubbo
-dubbo.protocol.port=20880
-
-dubbo.providers.p1.owner=luban1
-dubbo.providers.p2.owner=luban2
-dubbo.providers.p2.default=false
-
-#dubbo.registr.address=zookeeper://127.0.0.1:2181
-
+dubbo.protocol.name=http
+dubbo.protocol.port=80
+dubbo.protocol.host=0.0.0.0
 
 
 dubbo.registry.address=zookeeper://127.0.0.1:2181
-dubbo.config-center.address=zookeeper://127.0.0.1:2181
-dubbo.config-center.includeSpringEnv=true
