--- a/dubbo-demo/dubbo-demo-annotation/dubbo-demo-annotation-provider/src/main/resources/spring/dubbo-provider.properties
+++ b/dubbo-demo/dubbo-demo-annotation/dubbo-demo-annotation-provider/src/main/resources/spring/dubbo-provider.properties
@@ -19,8 +19,8 @@
 
 dubbo.application.name=dubbo-demo-annotation-provider
 
-dubbo.protocol.name=http
-dubbo.protocol.port=80
+dubbo.protocol.name=dubbo
+dubbo.protocol.port=20880
 dubbo.protocol.host=0.0.0.0
 
 
