--- a/dubbo-demo/dubbo-demo-annotation/dubbo-demo-annotation-provider/src/main/resources/spring/dubbo-provider.properties
+++ b/dubbo-demo/dubbo-demo-annotation/dubbo-demo-annotation-provider/src/main/resources/spring/dubbo-provider.properties
@@ -17,11 +17,13 @@
 #
 #
 
-dubbo.application.name=dubbo-demo-annotation-provider
+dubbo.application.name=dubbo-demo-annotation-provider-application
 
 dubbo.protocol.name=dubbo
 dubbo.protocol.port=20880
 dubbo.protocol.host=0.0.0.0
 
-
-dubbo.registry.address=zookeeper://127.0.0.1:2181
+dubbo.registries.r1.address=zookeeper://127.0.0.1:2181
+dubbo.registries.r2.address=redis://192.168.99.100:6379
+dubbo.config-center.address=zookeeper://127.0.0.1:2181
+dubbo.metadata-report.address=zookeeper://127.0.0.1:2181
