--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,7 @@
         <module>dubbo-metadata-report</module>
         <module>dubbo-configcenter</module>
         <module>dubbo-dependencies</module>
+        <module>dubbo-luban</module>
     </modules>
 
     <dependencyManagement>
