--- a/dubbo-demo/dubbo-demo-annotation/dubbo-demo-annotation-provider/src/main/resources/spring/dubbo-provider.properties
+++ b/dubbo-demo/dubbo-demo-annotation/dubbo-demo-annotation-provider/src/main/resources/spring/dubbo-provider.properties
@@ -18,10 +18,17 @@
 #
 
 dubbo.application.name=dubbo-demo-provider-application
+dubbo.application.logger=log4j
 
-dubbo.protocol.name=http
-dubbo.protocol.port=8081
-dubbo.protocol.host=0.0.0.0
+dubbo.protocols.p1.name=dubbo
+dubbo.protocols.p1.port=20880
+dubbo.protocols.p1.host=0.0.0.0
+
+#dubbo.protocols.p2.name=http
+#dubbo.protocols.p2.port=8082
+#dubbo.protocols.p2.host=0.0.0.0
+
+
 
 dubbo.registries.r1.address=zookeeper://127.0.0.1:2181
 #dubbo.registries.r2.address=redis://192.168.99.100:6379
