--- a/dubbo-demo/dubbo-demo-annotation/dubbo-demo-annotation-consumer/src/main/resources/spring/dubbo-consumer.properties
+++ b/dubbo-demo/dubbo-demo-annotation/dubbo-demo-annotation-consumer/src/main/resources/spring/dubbo-consumer.properties
@@ -18,4 +18,6 @@
 #
 
 dubbo.application.name=dubbo-demo-consumer-application
+
+dubbo.registry.id=123
 dubbo.registry.address=zookeeper://127.0.0.1:2181
