--- a/dubbo-demo/dubbo-demo-annotation/dubbo-demo-annotation-consumer/src/main/resources/spring/dubbo-consumer.properties
+++ b/dubbo-demo/dubbo-demo-annotation/dubbo-demo-annotation-consumer/src/main/resources/spring/dubbo-consumer.properties
@@ -21,3 +21,4 @@
 dubbo.application.name=dubbo-demo-consumer-application
 
 dubbo.registries.r1.address=zookeeper://127.0.0.1:2181
+dubbo.registries.r2.address=zookeeper://127.0.0.1:2181
