--- a/dubbo-demo/dubbo-demo-annotation/dubbo-demo-annotation-provider/src/main/resources/spring/dubbo-provider.properties
+++ b/dubbo-demo/dubbo-demo-annotation/dubbo-demo-annotation-provider/src/main/resources/spring/dubbo-provider.properties
@@ -21,17 +21,17 @@ dubbo.application.name=dubbo-demo-provider1-application
 dubbo.application.logger=log4j
 
 
-dubbo.protocol.name=dubbo
-dubbo.protocol.port=20881
-dubbo.protocol.host=0.0.0.0
+#dubbo.protocol.name=dubbo
+#dubbo.protocol.port=20881
+#dubbo.protocol.host=0.0.0.0
 
-#dubbo.protocols.p1.name=dubbo
-#dubbo.protocols.p1.port=20880
-#dubbo.protocols.p1.host=0.0.0.0
-#
-#dubbo.protocols.p2.name=http
-#dubbo.protocols.p2.port=8082
-#dubbo.protocols.p2.host=0.0.0.0
+dubbo.protocols.p1.name=dubbo
+dubbo.protocols.p1.port=20880
+dubbo.protocols.p1.host=0.0.0.0
+
+dubbo.protocols.p2.name=dubbo
+dubbo.protocols.p2.port=20881
+dubbo.protocols.p2.host=0.0.0.0
 
 
 
