--- a/dubbo-demo/dubbo-demo-annotation/dubbo-demo-annotation-provider/src/main/resources/spring/dubbo-provider.properties
+++ b/dubbo-demo/dubbo-demo-annotation/dubbo-demo-annotation-provider/src/main/resources/spring/dubbo-provider.properties
@@ -19,6 +19,7 @@
 
 dubbo.application.name=dubbo-demo-provider1-application
 dubbo.application.logger=log4j
+dubbo.application.timeout=3000
 
 
 #dubbo.protocol.name=dubbo
@@ -36,9 +37,11 @@ dubbo.protocols.p2.host=0.0.0.0
 
 
 dubbo.registries.r1.address=zookeeper://127.0.0.1:2181
+dubbo.registries.r1.timeout=3000
+#dubbo.registries.r1.address=zookeeper://127.0.0.1:9999?backup=127.0.0.1:8989,127.0.0.1:2181
 #dubbo.registries.r2.address=redis://192.168.99.100:6379
 
 
-dubbo.config-center.address=zookeeper://127.0.0.1:2181
+#dubbo.config-center.address=zookeeper://127.0.0.1:2181
 
-dubbo.metadata-report.address=zookeeper://127.0.0.1:2181
+#dubbo.metadata-report.address=zookeeper://127.0.0.1:2181
